--- a/src/Components/Style.module.css
+++ b/src/Components/Style.module.css
@@ -1,6 +1,7 @@
 .OuterBox{
-    border:3px solid red;
+    /* border:3px solid red; */
     display: flex;
+
 }
 
 .NavbarConatiner{
@@ -22,7 +23,7 @@
 }
 
 .ProductConatiner{
-    border: 1px solid rgba(0,0,0,0.1);
+    /* border: 1px solid rgba(0,0,0,0.1); */
     padding: 1rem;
     display: flex;
     justify-content: center;
